@@ -1,5 +1,4 @@
-# the following come from WebCore 2006-04-15 (WebKit/WebCore/html/HTMLNames.h)
-
+# From WebKit svn r53119 (WebCore/html/HTMLAttributeNames.in)
 abbr
 accept
 accept_charset
@@ -9,7 +8,39 @@ align
 alink
 alt
 archive
+aria-activedescendant
+aria-atomic
+aria-busy
+aria-checked
+aria-controls
+aria-describedby
+aria-disabled
+aria-dropeffect
+aria-expanded
+aria-flowto
+aria-grabbed
+aria-hidden
+aria-label
+aria-labeledby
+aria-labelledby
+aria-level
+aria-live
+aria-multiselectable
+aria-orientation
+aria-owns
+aria-pressed
+aria-readonly
+aria-relevant
+aria-required
+aria-selected
+aria-valuemax
+aria-valuemin
+aria-valuenow
+aria-valuetext
+autobuffer
 autocomplete
+autofocus
+autoplay
 autosave
 axis
 background
@@ -40,6 +71,7 @@ compact
 composite
 content
 contenteditable
+controls
 coords
 data
 datetime
@@ -48,9 +80,14 @@ defer
 dir
 direction
 disabled
+draggable
 enctype
+end
+expanded
 face
+focused
 for
+formnovalidate
 frame
 frameborder
 headers
@@ -62,16 +99,21 @@ hspace
 http_equiv
 id
 incremental
+indeterminate
 ismap
 keytype
 label
 lang
 language
-left
 leftmargin
 link
+list
 longdesc
 loop
+loopend
+loopstart
+lowsrc
+manifest
 marginheight
 marginwidth
 max
@@ -85,14 +127,18 @@ name
 nohref
 noresize
 noshade
+novalidate
 nowrap
 object
 onabort
 onbeforecopy
 onbeforecut
+onbeforeload
 onbeforepaste
 onbeforeunload
 onblur
+oncanplay
+oncanplaythrough
 onchange
 onclick
 oncontextmenu
@@ -106,45 +152,84 @@ ondragleave
 ondragover
 ondragstart
 ondrop
+ondurationchange
+onemptied
+onended
 onerror
 onfocus
+onhashchange
 oninput
+oninvalid
 onkeydown
 onkeypress
 onkeyup
 onload
+onloadeddata
+onloadedmetadata
+onloadstart
 onmousedown
 onmousemove
 onmouseout
 onmouseover
 onmouseup
 onmousewheel
+onoffline
+ononline
+onorientationchange
+onpagehide
+onpageshow
 onpaste
+onpause
+onplay
+onplaying
+onpopstate
+onprogress
+onratechange
 onreset
 onresize
 onscroll
 onsearch
+onseeked
+onseeking
 onselect
 onselectstart
+onstalled
+onstorage
 onsubmit
+onsuspend
+ontimeupdate
+ontouchend
+ontouchmove
+ontouchstart
 onunload
-pagex
-pagey
+onvolumechange
+onwaiting
+onwebkitanimationend
+onwebkitanimationiteration
+onwebkitanimationstart
+onwebkitbeginfullscreen
+onwebkitendfullscreen
+onwebkittransitionend
+pattern
 placeholder
-plain
-pluginpage
-pluginspage
+playcount
 pluginurl
+poster
 precision
+primary
 profile
+progress
 prompt
 readonly
 rel
+required
 results
 rev
+role
 rows
 rowspan
 rules
+sandbox
 scheme
 scope
 scrollamount
@@ -153,10 +238,14 @@ scrolling
 selected
 shape
 size
+sortable
+sortdirection
 span
+spellcheck
 src
 standby
 start
+step
 style
 summary
 tabindex
@@ -173,6 +262,7 @@ valign
 value
 valuetype
 version
+viewsource
 vlink
 vspace
 width
